--- a/metridoc-grails-gate/plugin.xml
+++ b/metridoc-grails-gate/plugin.xml
@@ -1,4 +1,4 @@
-<plugin name='metridoc-gate' version='0.9.0' grailsVersion='2.3.4 &gt; *'>
+<plugin name='metridoc-gate' version='0.9.0' grailsVersion='2.1 &gt; *'>
   <author>Gavin Young</author>
   <authorEmail>zhenghao@seas.upenn.edu</authorEmail>
   <title>Metridoc Gate Plugin</title>
@@ -8,5 +8,11 @@
   <type>MetridocGateGrailsPlugin</type>
   <resources>
     <resource>metridoc.gate.GateTransactionController</resource>
+    <resource>metridoc.gate.GateAffiliation</resource>
+    <resource>metridoc.gate.GateCenter</resource>
+    <resource>metridoc.gate.GateDepartment</resource>
+    <resource>metridoc.gate.GateDoor</resource>
+    <resource>metridoc.gate.GateEntryRecord</resource>
+    <resource>metridoc.gate.GateUSC</resource>
   </resources>
 </plugin>
